k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-board-ingress
  namespace: exam-board
  annotations:
    argocd.argoproj.io/sync-wave: "6"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Student Service
          - path: /student
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 8000

          # Admin Service
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8001
